--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id = "wrapper">
     <header class="border" >
-        <h1>Centro Medico ABC</h1>
+        <h1>Centro medico tu viejaaa</h1>
         <nav>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
